--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
       rel="stylesheet"
       href="https://code.getmdl.io/1.3.0/material.deep_purple-indigo.min.css"
     />
-    <script defer src="https://cdn.jsdelivr.net/npm/axios@0.24.0/dist/axios.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/axios@0.24.0/dist/axios.min.js"
+    ></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script defer src="app.js" type="module"></script>
     <title>GloboGym</title>
@@ -21,118 +24,203 @@
   <body>
     <header>
       <div class="navbar">
-        <div class="logo"><a href="#">Globo Gym</a></div>
+        <div class="logo"><img src="pngaaa.com-4630430.png" alt="Logo" /></div>
         <ul class="links">
           <li><a href="index.html">Home</a></li>
           <li><a href="locations">Locations</a></li>
           <li><a href="trainers">Trainers</a></li>
           <li><a href="profile">Profile</a></li>
         </ul>
-        <a href="#" class="action_btn">Login/Signup</a>
+        <a href="#" class="action_btn" id="signin_signup">Login/Signup</a>
         <div class="toggle_btn">
           <i class="material-icons">menu</i>
-      </div> 
-    </div>
-  </div>
+        </div>
+      </div>
 
-  <div class="dropdown_menu">
-    <li><a href="index.html">Home</a></li>
-      <li><a href="locations">Locations</a></li>
-      <li><a href="trainers">Trainers</a></li>
-      <li><a href="profile">Profile</a></li>
-      <li><a href="#" class="action_btn">Login/Signup</a></li>
-  </div>
+      <div class="dropdown_menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="locations">Locations</a></li>
+        <li><a href="trainers">Trainers</a></li>
+        <li><a href="profile">Profile</a></li>
+        <li>
+          <a href="#" class="action_btn" id="signin_signup_D">Login/Signup</a>
+        </li>
+      </div>
     </header>
-
-    </div>
-    <button id="test" class="test">test</button>
     <div id="popup-container">
       <div class="reg_container">
-        <div class="title">Registration</div>
-        <form action="#">
-          <div
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+        <div class="title">Registration/Sign-in</div>
+        <div class="forms-container">
+          <form
+            id="registration-form"
+            class="form registration-form"
+            action="#"
           >
-            <input class="mdl-textfield__input" type="text" id="fullName" name="fullName" required />
-            <label class="mdl-textfield__label" for="sample1">Full Name...</label>
-          </div>
-          <div
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          >
-            <input class="mdl-textfield__input" type="email" id="email" name="email" required />
-            <label class="mdl-textfield__label" for="sample1">Email...</label>
-          </div>
-          <div
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          >
-          <input class="mdl-textfield__input" type="text" id="username" name="username" required />
-          <label class="mdl-textfield__label" for="sample1">username...</label>
-        </div>
-          <div
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          >
-            <input class="mdl-textfield__input" type="password" id="password" name="password" required/>
-            <i class="material-icons password-eye">visibility</i>
-            <label class="mdl-textfield__label" for="sample1">password...</label>
-          </div>
-        <div
-          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-        >
-            <input class="mdl-textfield__input" type="password" id="confirmPassword" name="confirmPassword" required/>
-            <i id="confirmPasswordEye" class="material-icons password-eye">visibility</i>
-            <label class="mdl-textfield__label" for="sample1"
-              >confirm password</label
+            <div
+              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
             >
-          </div>
-          <div class="mdl-textfield mdl-js-textfield date-input">
-            <div class="date-of-birth">Date of Birth</div>
-            <label for="date-input"></label>
-            <input id="dateOfBirth"type="date" class="mdl-textfield__input" name="date-of-birth" required>
-          </div>
-          <div class="gender-contaier">
-            <label for="radio1" class="mdl-radio mdl-js-radio">
               <input
-                type="radio"
-                id="radio1"
-                name="gender"
-                class="mdl-radio__button"
-                value="F"
+                class="mdl-textfield__input"
+                type="text"
+                id="fullName"
+                name="fullName"
+                required
               />
-              <span class="mdl-radio__label">Male</span>
-            </label>
-            <label for="radio2" class="mdl-radio mdl-js-radio">
+              <label class="mdl-textfield__label" for="sample1"
+                >Full Name...</label
+              >
+            </div>
+            <div
+              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
               <input
-                type="radio"
-                id="radio2"
-                name="gender"
-                class="mdl-radio__button"
-                value="F"
+                class="mdl-textfield__input"
+                type="email"
+                id="email"
+                name="email"
+                required
+              />
+              <label class="mdl-textfield__label" for="sample1">Email...</label>
+            </div>
+            <div
+              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
+              <input
+                class="mdl-textfield__input"
+                type="text"
+                id="username"
+                name="username"
+                required
+              />
+              <label class="mdl-textfield__label" for="sample1"
+                >username...</label
+              >
+            </div>
+            <div
+              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
+              <input
+                class="mdl-textfield__input"
+                type="password"
+                id="password"
+                name="password"
+                required
+              />
+              <i class="material-icons password-eye">visibility</i>
+              <label class="mdl-textfield__label" for="sample1"
+                >password...</label
+              >
+            </div>
+            <div
+              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
+              <input
+                class="mdl-textfield__input"
+                type="password"
+                id="confirmPassword"
+                name="confirmPassword"
+                required
+              />
+              <i id="confirmPasswordEye" class="material-icons password-eye"
+                >visibility</i
+              >
+              <label class="mdl-textfield__label" for="sample1"
+                >confirm password</label
+              >
+            </div>
+            <div class="mdl-textfield mdl-js-textfield date-input">
+              <div class="date-of-birth">Date of Birth</div>
+              <label for="date-input"></label>
+              <input
+                id="dateOfBirth"
+                type="date"
+                class="mdl-textfield__input"
+                name="date-of-birth"
+                required
+              />
+            </div>
+            <div class="gender-contaier">
+              <label for="radio1" class="mdl-radio mdl-js-radio">
+                <input
+                  type="radio"
+                  id="radio1"
+                  name="gender"
+                  class="mdl-radio__button"
+                  value="F"
                 />
-              <span class="mdl-radio__label">Female</span>
-            </label>
-            <label for="radio3" class="mdl-radio mdl-js-radio">
+                <span class="mdl-radio__label">Male</span>
+              </label>
+              <label for="radio2" class="mdl-radio mdl-js-radio">
+                <input
+                  type="radio"
+                  id="radio2"
+                  name="gender"
+                  class="mdl-radio__button"
+                  value="F"
+                />
+                <span class="mdl-radio__label">Female</span>
+              </label>
+              <label for="radio3" class="mdl-radio mdl-js-radio">
+                <input
+                  type="radio"
+                  id="radio3"
+                  name="gender"
+                  class="mdl-radio__button"
+                  value="NA"
+                />
+                <span class="mdl-radio__label">Prefer not to say</span>
+              </label>
+            </div>
+            <button
+              class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+            >
+              Register
+            </button>
+          </form>
+          <div class="divider form-divider"></div>
+          <form id="signin-form" class="form signin-form">
+            <div
+              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
               <input
-                type="radio"
-                id="radio3"
-                name="gender"
-                class="mdl-radio__button"
-                value="NA"
+                class="mdl-textfield__input"
+                type="text"
+                id="username_login"
+                name="username"
+                required
               />
-              <span class="mdl-radio__label">Prefer not to say</span>
-            </label>
-          </div>
-          <button
-            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          >
-            Register
-          </button>
-          <button
-            id="close-button"
-            class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored"
-          >
-            <i class="material-icons">close</i>
-          </button>
-        </form>
+              <label class="mdl-textfield__label" for="sample1"
+                >username...</label
+              >
+            </div>
+            <div
+              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
+              <input
+                class="mdl-textfield__input"
+                type="text"
+                id="password_login"
+                name="password"
+                required
+              />
+              <label class="mdl-textfield__label" for="sample1"
+                >password...</label
+              >
+            </div>
+            <button
+              class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+            >
+              Sign In
+            </button>
+          </form>
+        </div>
+
+        <button
+          id="close-button"
+          class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored"
+        >
+          <i class="material-icons">close</i>
+        </button>
       </div>
     </div>
   </body>
