fixed some colors of certain components

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       <div class="body-container">
         <div class="demo-card-wide mdl-card mdl-shadow--2dp">
           <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Hello user</h2>
+            <h2 class="mdl-card__title-text">Your future starts here</h2>
           </div>
           <div class="mdl-card__supporting-text">
             Here at Globo Gym, we're better than you and we know it. Join our
